objects/Tab_Panel__mdt.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TabPanel_Unique_Key__c</fullName>
        <inlineHelpText>Enter unique key to identify template to pick.</inlineHelpText>
        <label>TabPanel Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Icon_Name__c</fullName>
        <label>Tab Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Order__c</fullName>
        <label>Tab Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tab Panel Wizard</label>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>Default__c</columns>
        <columns>Tab_Icon_Name__c</columns>
        <columns>Tab_Order__c</columns>
        <columns>TabPanel_Unique_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
    <pluralLabel>Tab Panel Wizard</pluralLabel>
</CustomObject>